Adding compiler plugin