@@ -29,23 +29,18 @@
         </repository>
     </repositories>
 
-    <!--<build>
+    <build>
         <plugins>
             <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.12.3</version>
-                <inherited>false</inherited>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
                 <configuration>
-                    &lt;!&ndash;<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=128m</argLine>&ndash;&gt;
-                    <testFailureIgnore>true</testFailureIgnore>
-                    <disableXmlReport>false</disableXmlReport>
-                    <parallel>false</parallel>
-                    <includes>
-                        <include>**/*TestCase.java</include>
-                    </includes>
+                   <source>1.7</source>
+                    <target>1.7</target>
                 </configuration>
             </plugin>
         </plugins>
-    </build>-->
+    </build>
 
 </project>
